# keepkey-firmware

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt
docs/: Build.md
include/keepkey/firmware/: erc721.h
include/keepkey/firmware/ethereum_contracts/: makerdao.h
include/trezor/: crypto
lib/board/: memory.c
lib/firmware/: CMakeLists.txt  erc721.c  ethereum.c  ethereum_contracts.c  signing.c  transaction.c
lib/firmware/ethereum_contracts/: makerdao.c
lib/transport/: CMakeLists.txt
tools/emulator/: CMakeLists.txt
